# lightning-hydra-template

./: .gitignore  .pre-commit-config.yaml  environment.yaml  pyproject.toml  requirements.txt  test.py  test_2.py  test_3.py  test_4.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: test.yml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  resource_monitor.yaml  wandb_image_logger.yaml
configs/hparams_search/: pureforest_wandb_example.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/paths/: default.yaml
configs_zen/: README.md  __init__.py  callbacks.py  datamodule.py  logger.py  model.py  model_old.py  paths.py  train.py  trainer.py
launch/hpc/sweeps/: 1g.sh  3g.sh  rtx.sh
launch/hpc/vda/: 1g.sh  3g.sh  rtx.sh
notebooks/: 0_tmp.ipynb  util_0 - ckpt to pth.ipynb
scripts/hpc/sweeps/: 1g.sh  3g.sh  rtx.sh
scripts/hpc/vda/: 1g.sh  rtx.sh
src/: eval.py  predict.py  train.py  train_zen.py
src/data/: mnist_datamodule.py
src/utils/: __init__.py  configurable.py  instantiators.py  logging_utils.py  resource_monitor_callback.py  rich_utils.py  utils.py  viz.py  wandb_image_logger_callback.py
tests/: conftest.py  test_datasets.py  test_sweeps.py
tests/helpers/: run_if.py  run_sh_command.py
