[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JacopoLungo", email = "jacopo.lungo@hotmail.it" }
]
requires-python = ">=3.10"

dependencies = [
    "lightning",
    "hydra-core",
    "ipykernel>=7.1.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "torchmetrics>=0.11.4",
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
    "wandb",
    "pre-commit", # hooks for applying linters on commit
    "rich", # beautiful text formatting in terminal
    "pytest", # tests
    "omegaconf",
    "ipykernel",
    "python-dotenv>=1.2.1",
]

[project.scripts]
train_command = "src.train:main"
eval_command = "src.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
log_cli = true
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "UP"]
